# libcamcapture

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/capture_single_frame/: CMakeLists.txt  main.cpp
examples/example_utility/: CMakeLists.txt
examples/example_utility/include/example_utility/: bmp.h
examples/example_utility/src/: bmp.cpp
include/libcamcapture/: capture_sample.h  capture_sample_fwd.h  gdi_capture_source.h  icapture_source.h  libcamcapture.h
src/: gdi_capture_source.cpp
